<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        >
    <PreferenceCategory
            android:title="@string/whitelist"
            >
            <SwitchPreference
                android:title="Answer all calls"
                android:defaultValue="false"
                android:persistent="true"
                android:key="@string/answerAll"
                android:icon="@drawable/ic_all_inclusive_24px"
                />

            <EditTextPreference
                    android:dialogTitle="@string/phoneNumber"
                    android:dialogMessage="@string/phoneNumberPrompt"
                    android:title="@string/phoneNumber"
                    android:key="@string/phoneKey"
                    android:icon="@drawable/ic_call_24px"
                    >
            </EditTextPreference>
    </PreferenceCategory>
    <PreferenceCategory
            android:title="@string/various"
            >
        <ListPreference
                android:title="@string/answerDelay"
                android:entries="@array/delayEntries"
                android:entryValues="@array/delayValues"
                android:defaultValue="0"
                android:key="@string/delayKey"
                android:icon="@drawable/ic_timer_24px"
                />

    </PreferenceCategory>
</PreferenceScreen>